# Cocai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  README.md  chat_store.json  demo_of_llama3.1_function_calling_with_llama_index.py  justfile  main.py  my_monkey_patch.py  pyproject.toml  server.py  tmuxinator.yaml  tool_for_suggesting_choices.py  tools.py  utils.py
.chainlit/: config.toml  schema.sql
.chainlit/translations/: en-US.json
.github/workflows/: docker-image.yml
dice/: demo.py  dice.py  index.jinja
dice/static/: dice.js  script.js
game_modules/: “Clean Up, Aisle Four!” By Michael C. LaBossiere (a module for Call of Cthulhu).md
prompts/: choices_prompt.md  system_prompt.md
public/: README.md  custom_chainlit.css
