[project]
name = "cocai"
version = "0.1.0"
description = "A chatbot that plays Call of Cthulhu (CoC) with you, powered by AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arize-phoenix>=4.32.0",
    "chainlit>=1.1.402",
    "cochar>=1.0.1",
    "llama-index-embeddings-ollama>=0.3.0",
    "llama-index-llms-ollama",
    "llama-index>=0.5.1",
    "rich>=13.8.0",
    "ruff>=0.6.3",
    "tomlkit>=0.13.2",
]
