[project]
name = "cocai"
version = "0.1.0"
description = "A chatbot that plays Call of Cthulhu (CoC) with you, powered by AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "arize-phoenix>=5.2.2",
    "arize-phoenix-otel>=0.4.1",
    "boto3>=1.35.39",
    "chainlit>=1.3.0rc0",
    "cochar>=1.0.1",
    "llama-index-agent-openai>=0.3.0",
    "llama-index-core>=0.10.43",
    "llama-index-embeddings-ollama>=0.3.0",
    "llama-index-llms-ollama",
    "llama-index-llms-openai-like>=0.2.0",
    "llama-index-llms-openai>=0.2.12",
    "llama-index-tools-tavily-research>=0.2.0",
    "openinference-instrumentation-llama-index>=2",
    "opentelemetry-proto>=1.12.0",
    "rich>=13.8.0",
    "ruff>=0.6.3",
    "tomlkit>=0.13.2",
    "llama-index>=0.11.17",
]
